feat: add localization

--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ForgotPasswordWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ForgotPasswordWindow.xaml
@@ -20,7 +20,7 @@
                     Click="btn_Close_Click"/>
 
             <!-- Cím -->
-            <TextBlock Text="Forgot Password"
+            <TextBlock Text="{DynamicResource ForgotPassword}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Top"
                        Style="{StaticResource h1}" />
@@ -36,7 +36,7 @@
                 </Grid.RowDefinitions>
 
                 <!-- Email -->
-                <TextBlock Text="Email"
+                <TextBlock Text="{DynamicResource Email}"
                            Grid.Row="0"
                            Margin="91,8,0,0"
                            HorizontalAlignment="Left"
@@ -51,7 +51,7 @@
 
                 <!-- Send Code gomb -->
                 <Button x:Name="btn_SendCode"
-                        Content="Send Code"
+                        Content="{DynamicResource SendCode}"
                         Grid.Row="1"
                         Margin="0,10,0,10"
                         Width="140"
@@ -60,7 +60,7 @@
                         Click="btn_SendCode_Click" />
 
                 <!-- Temporary Code -->
-                <TextBlock Text="Temporary Code"
+                <TextBlock Text="{DynamicResource TemporaryCode}"
                            Grid.Row="2"
                            Margin="91,8,0,0"
                            HorizontalAlignment="Left"
@@ -75,7 +75,7 @@
 
                 <!-- Verify Code gomb -->
                 <Button x:Name="btn_VerifyCode"
-                        Content="Verify Code"
+                        Content="{DynamicResource VerifyCode}"
                         Grid.Row="3"
                         Margin="0,10,0,10"
                         Width="140"
@@ -83,13 +83,12 @@
                         HorizontalAlignment="Center"
                         Click="btn_VerifyCode_Click" />
             </Grid>
-            <Button Content="Back"
+            <!-- Back button-->
+            <Button Content="{DynamicResource Back}"
                     x:Name="btn_Back"
                     Width="80"
                     Height="30"
                     Click="btn_Back_Click" />
-
-            <!-- Vissza gomb -->
         </StackPanel>
     </Border>
 </Window>
