--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ResetPasswordWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ResetPasswordWindow.xaml
@@ -19,7 +19,7 @@
                     Click="btn_Close_Click"/>
 
             <!-- Cím -->
-            <TextBlock Text="Reset Password"
+            <TextBlock Text="{DynamicResource ResetPassword}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Top"
                        Style="{StaticResource h1}"/>
@@ -34,7 +34,7 @@
                 </Grid.RowDefinitions>
 
                 <!-- Új jelszó -->
-                <TextBlock Text="New Password"
+                <TextBlock Text="{DynamicResource NewPassword}"
                            Grid.Row="0"
                            Margin="80,11,0,0"
                            HorizontalAlignment="Left"
@@ -49,7 +49,7 @@
                     Style="{StaticResource ModernPasswordBox}"/>
 
                 <!-- Megerősítés -->
-                <TextBlock Text="Confirm Password"
+                <TextBlock Text="{DynamicResource ConfirmPassword}"
                            Grid.Row="1"
                            Margin="80,10,0,0"
                            HorizontalAlignment="Left"
@@ -74,7 +74,7 @@
                     Click="btn_Save_Click"/>
 
             <!-- Vissza gomb -->
-            <Button Content="Back"
+            <Button Content="{DynamicResource Back}"
                     x:Name="btn_Back"
                     Margin="0,10,0,0"
                     Width="100"
