--- a/Tool-Data-Inventory-Manager/App.xaml
+++ b/Tool-Data-Inventory-Manager/App.xaml
@@ -7,6 +7,7 @@
    <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/Localization/Strings.hu.xaml"/>
                 <materialDesign:BundledTheme BaseTheme="Light"
                                             PrimaryColor="Indigo"
                                             SecondaryColor="Indigo"/>
