--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/LoginWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/LoginWindow.xaml
@@ -15,7 +15,7 @@
             <Button Style="{StaticResource CloseButtonStyle}"
                     x:Name="btn_Close"
                     Click="btn_Close_Click"/>
-            <TextBlock Text="Login"
+            <TextBlock Text="{DynamicResource Login}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Top"
                        Style="{StaticResource h1}"/>
@@ -28,7 +28,7 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <!-- Email section -->
-                <TextBlock Text="Email" 
+                <TextBlock Text="{DynamicResource Email}" 
                    Grid.Row="1"
                    Margin="90 0 0 0"
                    HorizontalAlignment="Left"
@@ -47,7 +47,7 @@
                            Grid.Row="1"/>
                 
                 <!-- Password seciton -->
-                <TextBlock Text="Password" 
+                <TextBlock Text="{DynamicResource Password}" 
                    Grid.Row="3"
                    Margin="90,0,0,0"
                    HorizontalAlignment="Left"
@@ -63,7 +63,7 @@
                     Style="{StaticResource ModernPasswordBox}"/>
             </Grid>
             <Button x:Name="LoginBtn" 
-                    Content="Login"
+                    Content="{DynamicResource Login}"
                     Height="35"
                     Margin="0 20 0 0"
                     Width="150"
@@ -75,7 +75,7 @@
             Margin="0,10,0,10"
             HorizontalAlignment="Center">
 
-               <TextBlock Text="Forgot password?"
+                <TextBlock Text="{DynamicResource ForgotPasswordQuestion}"
                Style="{StaticResource textBlockWithHover}"
                HorizontalAlignment="Center"
                x:Name="tb_forgotPassword"
@@ -83,7 +83,7 @@
                Margin="0 5 0 5"
                MouseLeftButtonDown="tb_forgotPassword_MouseLeftButtonDown"/>
 
-               <TextBlock Text="I don't have an account yet."
+                <TextBlock Text="{DynamicResource NoAccountYet}"
                Style="{StaticResource textBlockWithHover}"
                HorizontalAlignment="Center"
                x:Name="tb_notMember"
