--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/AssignProductWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/AssignProductWindow.xaml
@@ -1,11 +1,11 @@
 ﻿<Window x:Class="Tool_Data_Inventory_Manager.Features.InventoryManager.Views.AssignProductWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Product hozzárendelése" Height="300" Width="400">
+        Title="{DynamicResource ProductAssignment}" Height="300" Width="400">
     <Grid Margin="10">
         <ListBox x:Name="AvailableProductsListBox" DisplayMemberPath="ProductNumber"/>
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0 10 0 0">
-            <Button Content="Hozzárendelés" VerticalAlignment="Bottom" Click="AssignButton_Click" Width="120" Height="30"/>
+            <Button Content="{DynamicResource Assign}" VerticalAlignment="Bottom" Click="AssignButton_Click" Width="120" Height="30"/>
         </StackPanel>
     </Grid>
 </Window>
