--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/EditMachineWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/EditMachineWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Tool_Data_Inventory_Manager.Features.InventoryManager.Views.EditMachineWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Gép szerkesztése" Height="400" Width="400" WindowStartupLocation="CenterScreen">
+        Title="{DynamicResource EditMachine}" Height="400" Width="400" WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -10,10 +10,10 @@
         </Grid.RowDefinitions>
 
         <StackPanel>
-            <Label Content="Gép neve:"/>
+            <Label Content="{DynamicResource MachineName}"/>
             <TextBox x:Name="MachineNameTextBox" Margin="0 0 0 10"/>
 
-            <Label Content="Hozzárendelt termékek:"/>
+            <Label Content="{DynamicResource ProductsToBeAssigned}"/>
             <ListBox x:Name="ProductListBox" SelectionMode="Extended" DisplayMemberPath="ProductNumber" Height="150"/>
         </StackPanel>
 
