--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/MachineAddWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/MachineAddWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Tool_Data_Inventory_Manager.Features.InventoryManager.Views.MachineAddWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Új Gép Hozzáadása" Height="400" Width="400" WindowStartupLocation="CenterScreen">
+        Title="{DynamicResource AddNewMachine}" Height="400" Width="400" WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -10,16 +10,16 @@
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Vertical" Margin="0,0,0,10">
-            <TextBlock Text="Gép neve:" Margin="0,0,0,5"/>
+            <TextBlock Text="{DynamicResource MachineName}" Margin="0,0,0,5"/>
             <TextBox x:Name="MachineNameTextBox" />
         </StackPanel>
 
-        <GroupBox Header="Termékek kiválasztása" Grid.Row="1" Margin="0,0,0,10">
+        <GroupBox Header="{DynamicResource ProductsToBeAssigned}" Grid.Row="1" Margin="0,0,0,10">
             <ScrollViewer>
                 <ListBox x:Name="ProductListBox" SelectionMode="Extended" DisplayMemberPath="ProductNumber"/>
             </ScrollViewer>
         </GroupBox>
 
-        <Button Grid.Row="2" Content="Hozzáadás" Click="AddMachineButton_Click" HorizontalAlignment="Right" Width="100" Height="30"/>
+        <Button Grid.Row="2" Content="{DynamicResource Add}" Click="AddMachineButton_Click" HorizontalAlignment="Right" Width="100" Height="30"/>
     </Grid>
 </Window>
