--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/ToolEditorWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/ToolEditorWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Tool_Data_Inventory_Manager.Features.InventoryManager.Views.ToolEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Tool szerkesztése" Height="400" Width="400" WindowStartupLocation="CenterScreen">
+        Title="{DynamicResource EditTool}" Height="400" Width="400" WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -12,35 +12,35 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Label Content="Név:" Grid.Row="0"/>
+        <Label Content="{DynamicResource Name}" Grid.Row="0"/>
         <TextBox x:Name="NameTextBox" Grid.Row="0" Margin="80,0,0,5"/>
 
-        <Label Content="Material Number:" Grid.Row="1"/>
+        <Label Content="{DynamicResource MaterialNumber}" Grid.Row="1"/>
         <TextBox x:Name="MaterialNumberTextBox" Grid.Row="1" Margin="80,0,0,5"/>
 
-        <Label Content="Mag Place:" Grid.Row="2"/>
+        <Label Content="{DynamicResource OptionalMagPlace}" Grid.Row="2"/>
         <TextBox x:Name="MagPlaceTextBox" Grid.Row="2" Margin="80,0,0,5"/>
 
-        <Label Content="Ár (€):" Grid.Row="3"/>
+        <Label Content="{DynamicResource PriceWithCurrency}" Grid.Row="3"/>
         <TextBox x:Name="PriceTextBox" Grid.Row="3" Margin="80,0,0,5"/>
 
         <!-- Új: Kategóriák -->
-        <GroupBox Header="Kategóriák" Grid.Row="4" Margin="0,10,0,0">
+        <GroupBox Header="{DynamicResource Categories}" Grid.Row="4" Margin="0,10,0,0">
             <WrapPanel Margin="10" VerticalAlignment="Top">
-                <CheckBox Content="Nagyolómaró" x:Name="CheckNagyolomaro" Margin="5"/>
-                <CheckBox Content="Sorjázómaró" x:Name="CheckSorjazomaro" Margin="5"/>
-                <CheckBox Content="Simítómaró" x:Name="CheckSimitomaro" Margin="5"/>
-                <CheckBox Content="Nagyoló maró I." x:Name="CheckNagyoloI" Margin="5"/>
-                <CheckBox Content="Nagyoló maró II." x:Name="CheckNagyoloII" Margin="5"/>
-                <CheckBox Content="Simítómaró" x:Name="CheckSimito2" Margin="5"/>
-                <CheckBox Content="Előfúró" x:Name="CheckElofuro" Margin="5"/>
-                <CheckBox Content="Csigafúró" x:Name="CheckCsigafuro" Margin="5"/>
+                <CheckBox Content="{DynamicResource Nagyolomaro}" x:Name="CheckNagyolomaro" Margin="5"/>
+                <CheckBox Content="{DynamicResource Sorjazomaro}" x:Name="CheckSorjazomaro" Margin="5"/>
+                <CheckBox Content="{DynamicResource Simitomaro}" x:Name="CheckSimitomaro" Margin="5"/>
+                <CheckBox Content="{DynamicResource NagyoloI}" x:Name="CheckNagyoloI" Margin="5"/>
+                <CheckBox Content="{DynamicResource NagyoloII}" x:Name="CheckNagyoloII" Margin="5"/>
+                <CheckBox Content="{DynamicResource Simito2}" x:Name="CheckSimito2" Margin="5"/>
+                <CheckBox Content="{DynamicResource Elofuro}" x:Name="CheckElofuro" Margin="5"/>
+                <CheckBox Content="{DynamicResource Csigafuro}" x:Name="CheckCsigafuro" Margin="5"/>
             </WrapPanel>
         </GroupBox>
 
         <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-            <Button Content="Mentés" Width="80" Click="Save_Click" Margin="5" Height="30"/>
-            <Button Content="Mégse" Width="80" Click="Cancel_Click" Margin="5" Height="30"/>
+            <Button Content="{DynamicResource Save}" Width="80" Click="Save_Click" Margin="5" Height="30"/>
+            <Button Content="{DynamicResource Cancel}" Width="80" Click="Cancel_Click" Margin="5" Height="30"/>
         </StackPanel>
     </Grid>
 </Window>
