--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/ToolHasProductsWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/ToolHasProductsWindow.xaml
@@ -1,14 +1,14 @@
 ﻿<Window x:Class="Tool_Data_Inventory_Manager.Features.InventoryManager.Views.ToolHasProductsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Kapcsolódó termékek" Height="300" Width="400" WindowStartupLocation="CenterScreen">
+        Title="{DynamicResource AssignedProducts}" Height="300" Width="400" WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
-        <TextBlock Text="Ez a szerszám a következő termékekhez van hozzárendelve:" 
+        <TextBlock Text="{DynamicResource ThisToolIsAssignedToTheFollowingProducts}" 
                    FontWeight="Bold" Margin="0,0,0,10"/>
         <ListBox x:Name="ProductList" Margin="0,30,0,50"/>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,0,5">
-            <Button Content="Törlés és leválasztás" Width="150" Margin="5" Click="Confirm_Click" Height="30"/>
-            <Button Content="Mégsem" Width="80" Margin="5" Click="Cancel_Click" Height="30"/>
+            <Button Content="{DynamicResource DeletionAndDetachment}" Width="180" Margin="5" Click="Confirm_Click" Height="30"/>
+            <Button Content="{DynamicResource Cancel}" Width="80" Margin="5" Click="Cancel_Click" Height="30"/>
         </StackPanel>
     </Grid>
 </Window>
