--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/WorkspaceWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/WorkspaceWindow.xaml
@@ -18,7 +18,7 @@
         </Grid.RowDefinitions>
 
         <!-- Felhasználó neve -->
-        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
+        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,5,5,627" Width="239">
             <TextBlock Text="{DynamicResource LoggedIn}" FontWeight="Bold"/>
             <TextBlock Text="{Binding LoggedInUserName}" x:Name="tb_loggedInUserName" />
         </StackPanel>
@@ -158,5 +158,6 @@
                 </StackPanel>
             </TabItem>
         </TabControl>
+        <Button x:Name="btn_logout" Content="Log Out" Click="btn_logout_Click" RenderTransformOrigin="0.5,0.56" Margin="550,3,255,630" HorizontalAlignment="Right"/>
     </Grid>
 </Window>
