--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/WorkspaceWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/WorkspaceWindow.xaml
@@ -23,6 +23,37 @@
             <TextBlock Text="{Binding LoggedInUserName}" x:Name="tb_loggedInUserName" />
         </StackPanel>
         <TabControl>
+            <!-- MACHINE TAB -->
+            <TabItem Header="{DynamicResource Machines}" RenderTransformOrigin="-2.334,0.498">
+                <ScrollViewer VerticalScrollBarVisibility="Auto">
+                    <StackPanel Margin="10">
+                        <GroupBox Header="Machine keresés" Margin="0 0 0 10">
+                            <StackPanel Orientation="Vertical" Margin="5">
+                                <Button Content="{DynamicResource AddNewMachine}" Click="AddMachine_Click" Margin="5" Width="150" Height="30"/>
+                            </StackPanel>
+                        </GroupBox>
+
+                        <GroupBox Header="Gépek" Margin="0 10 0 10">
+                            <DataGrid x:Name="MachineDataGrid"
+                          AutoGenerateColumns="False" 
+                          IsReadOnly="True"
+                          Height="400"
+                          SelectionMode="Single" 
+                          MouseDoubleClick="MachineDataGrid_MouseDoubleClick">
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="{DynamicResource Name}" Binding="{Binding Name}" Width="*"/>
+                                    <DataGridTextColumn Header="{DynamicResource Products}" Binding="{Binding Products}" Width="3*"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
+                        </GroupBox>
+
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 10 0 0">
+                            <Button Content="{DynamicResource DeleteMachine}" Click="DeleteMachineButton_Click" Width="130" Height="30"/>
+                        </StackPanel>
+                    </StackPanel>
+                </ScrollViewer>
+            </TabItem>
+            
             <!-- TOOL TAB -->
             <TabItem Header="{DynamicResource Tools}">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
@@ -93,36 +124,7 @@
                 </ScrollViewer>
             </TabItem>
 
-            <!-- MACHINE TAB -->
-            <TabItem Header="{DynamicResource Machines}">
-                <ScrollViewer VerticalScrollBarVisibility="Auto">
-                    <StackPanel Margin="10">
-                        <GroupBox Header="Machine keresés" Margin="0 0 0 10">
-                            <StackPanel Orientation="Vertical" Margin="5">
-                                <Button Content="{DynamicResource AddNewMachine}" Click="AddMachine_Click" Margin="5" Width="150" Height="30"/>
-                            </StackPanel>
-                        </GroupBox>
-
-                        <GroupBox Header="Gépek" Margin="0 10 0 10">
-                            <DataGrid x:Name="MachineDataGrid"
-                                      AutoGenerateColumns="False" 
-                                      IsReadOnly="True"
-                                      Height="400"
-                                      SelectionMode="Single" 
-                                      MouseDoubleClick="MachineDataGrid_MouseDoubleClick">
-                                <DataGrid.Columns>
-                                    <DataGridTextColumn Header="{DynamicResource Name}" Binding="{Binding Name}" Width="*"/>
-                                    <DataGridTextColumn Header="{DynamicResource Products}" Binding="{Binding Products}" Width="3*"/>
-                                </DataGrid.Columns>
-                            </DataGrid>
-                        </GroupBox>
-
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0 10 0 0">
-                            <Button Content="{DynamicResource DeleteMachine}" Click="DeleteMachineButton_Click" Width="130" Height="30"/>
-                        </StackPanel>
-                    </StackPanel>
-                </ScrollViewer>
-            </TabItem>
+            
             <TabItem Header="{DynamicResource Export}">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="0,10,0,0">
                     <Button x:Name="btn_export" Content="{DynamicResource Export}" Click="btn_export_Click" Width="120" Height="30"/>
