--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ForgotPasswordWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/ForgotPasswordWindow.xaml
@@ -9,7 +9,8 @@
         Title="Forgot Password"
         Height="400" Width="650"
         WindowStartupLocation="CenterScreen"
-        Style="{StaticResource RoundedWindowStyle}">
+        Style="{StaticResource RoundedWindowStyle}"
+        Icon="/Resources/Tool-Data-Icon.png">
 
     <Border Style="{StaticResource RoundedWindowBorderStyle}" MouseLeftButtonDown="Border_MouseLeftButtonDown">
         <StackPanel Style="{StaticResource WrapperStackPanel}" Height="380" Width="630">
