--- a/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/LoginWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/AuthenticationService/Views/LoginWindow.xaml
@@ -9,7 +9,8 @@
         mc:Ignorable="d"
         Height="400" Width="650"
         WindowStartupLocation="CenterScreen"
-        Style="{StaticResource RoundedWindowStyle}">
+        Style="{StaticResource RoundedWindowStyle}"
+        Icon="/Resources/Tool-Data-Icon.png">
     <Border Style="{StaticResource RoundedWindowBorderStyle}" MouseLeftButtonDown="Border_MouseLeftButtonDown">
         <StackPanel Style="{StaticResource WrapperStackPanel}" Width="630" Height="380">
             <Button Style="{StaticResource CloseButtonStyle}"
