--- a/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/MachineAddWindow.xaml
+++ b/Tool-Data-Inventory-Manager/Features/InventoryManager/Views/MachineAddWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="Tool_Data_Inventory_Manager.Features.InventoryManager.Views.MachineAddWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="{DynamicResource AddNewMachine}" Height="400" Width="400" WindowStartupLocation="CenterScreen">
+        Title="{DynamicResource AddNewMachine}" Height="400" Width="400" WindowStartupLocation="CenterScreen"
+        Icon="/Resources/Tool-Data-Icon.png">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
